--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -3,5 +3,5 @@ $font-title: 'Poppins', sans-serif;
 
 $color-title: #116b8a;
 $color-text: #585858;
-$border: #c8dce3;
-$bg-post: #f2f8fa;
+$border: #ccc;
+$bg-post: #f3f7fc;
