--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -5,3 +5,13 @@ $color-title: #116b8a;
 $color-text: #585858;
 $border: #ccc;
 $bg-post: #f3f7fc;
+
+
+// ----------------------------------------
+// Media Queries for Standard Devices
+// ----------------------------------------
+$xs: 'only screen and (max-width: 575px)';
+$sm: 'only screen and (min-width: 576px)';
+$md: 'only screen and (min-width: 768px)';
+$lg: 'only screen and (min-width: 992px)';
+$xl: 'only screen and (min-width: 1200px)';
