--- a/src/pages/Home/style.scss
+++ b/src/pages/Home/style.scss
@@ -1,9 +1,73 @@
-$color-text: #010101;
-
-.none {
-    display: none;
-}
+@import '../../assets/scss/variables.scss';
 
 .pg-home {
     color: $color-text;
+
+    .posts {
+        .post {
+            padding: 20px;
+            border-radius: 4px;
+            border: 1px solid $border;
+            background-color: $bg-post;
+            margin-bottom: 20px;
+            transition: .3s;
+            cursor: pointer;
+
+            &:hover {
+                background-color: rgba($bg-post, 0.1);
+                box-shadow: 2px 2px 6px rgba(#ccc, 0.3);
+            }
+
+            &__title {
+                font-family: $font-title;
+                color: $color-title;
+                height: 60px;
+                text-transform: uppercase;
+                font-size: 22px;
+                line-height: 1.4em;
+                font-weight: 500;
+                margin-bottom: 20px;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                display: -webkit-box;
+                -webkit-line-clamp: 2;
+                -webkit-box-orient: vertical;
+            }
+
+            &__text {
+                font-family: $font-text;
+                color: $color-text;
+                height: 60px;
+                font-size: 16px;
+                line-height: 1.3em;
+                letter-spacing: 1;
+                font-weight: 300;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                display: -webkit-box;
+                -webkit-line-clamp: 3;
+                -webkit-box-orient: vertical;
+                margin-bottom: 20px;
+            }
+        }
+
+        .btn {
+            border-radius: 5px;
+            width: 100%;
+            padding: 20px;
+            background-color: white;
+            font-family: $font-text;
+
+            &.btn {
+                &--delete {
+                    background-color: rgba(red, 0.5);
+                    color: white;
+
+                    &:hover {
+                        background-color: rgba(red, 0.7);
+                    }
+                }
+            }
+        }
+    }
 }
