--- a/src/components/elements/Typography/style.scss
+++ b/src/components/elements/Typography/style.scss
@@ -3,6 +3,12 @@
 .h1, .h2, .h3, .h4, .h5, .h6 {
     font-family: $font-title;
     line-height: 1.3em;
+
+    @each $name, $color in $textColors {
+        &.#{$name} {
+            color: nth($color, 1);
+        }
+    }
 }
 
 .h1 {
