--- a/src/pages/Home/style.scss
+++ b/src/pages/Home/style.scss
@@ -1,26 +1,30 @@
 @import '../../assets/scss/variables.scss';
 
 .pg-home {
-    color: $color-text;
+    .container {
+        padding: 80px 0;
+    }
+    .wrapper-typography {
+        margin-bottom: 40px;
+    }
 
     .posts {
         .post {
             padding: 20px;
             border-radius: 4px;
-            border: 1px solid $border;
-            background-color: $bg-post;
+            border: 1px solid rgba($bg__gray, .5);
+            background-color: rgba($bg__white, .4);
             margin-bottom: 20px;
             transition: .3s;
             cursor: pointer;
+            margin-bottom: 20px;
 
             &:hover {
-                background-color: rgba($bg-post, 0.1);
-                box-shadow: 2px 2px 6px rgba(#ccc, 0.3);
+                background-color: rgba($bg__gray, .1);
+                box-shadow: 2px 2px 6px rgba($shadow__gray, 0.3);
             }
 
-            &__title {
-                font-family: $font-title;
-                color: $color-title;
+            .h1 {
                 height: 60px;
                 text-transform: uppercase;
                 font-size: 22px;
@@ -34,9 +38,7 @@
                 -webkit-box-orient: vertical;
             }
 
-            &__text {
-                font-family: $font-text;
-                color: $color-text;
+            .paragraph {
                 height: 60px;
                 font-size: 16px;
                 line-height: 1.3em;
@@ -49,22 +51,23 @@
                 -webkit-box-orient: vertical;
                 margin-bottom: 20px;
             }
-        }
 
-        .btn {
-            border-radius: 5px;
-            width: 100%;
-            padding: 20px;
-            background-color: white;
-            font-family: $font-text;
+            .btn {
+                font-family: $font-text;
+                border-radius: 5px;
+                width: 100%;
+                padding: 20px;
+                background-color: $bg__white;
 
-            &.btn {
-                &--delete {
-                    background-color: rgba(red, 0.5);
-                    color: white;
+                &.btn {
+                    &--delete {
+                        background-color: rgba($bg__primary, 0.8);
+                        color: $text__white;
 
-                    &:hover {
-                        background-color: rgba(red, 0.7);
+                        &:hover {
+                            background-color: rgba($bg__primary, 0.7);
+                            color: white;
+                        }
                     }
                 }
             }
